--- a/style.css
+++ b/style.css
@@ -139,6 +139,7 @@ h2 {
   margin-left: 10px;
 }
 
+/* TODO Should make this into a flexbox that contains all the elements going downwards */
 .projects-container {
   margin-bottom: 100px;
 }
@@ -162,13 +163,42 @@ h2 {
   font-size: 20px;
   margin-left: 50px;
   margin-top: 5px;
+  margin-bottom: 40px;
+}
+
+.my-projects-text {
+  margin-top: 25px;
+  margin-right: 50px;
+  text-align: right;
+}
+
+.hr-with-text {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 95%;
+  margin-left: 50px;
+  margin-top: 75px;
+  margin-bottom: 25px;
+}
+
+.hr-with-text::before {
+  content: "";
+  flex-grow: 1;
+  border-bottom: 1px solid #e57c23;
+  margin-right: 10px; /* Spacing between line and text */
+}
+
+.hr-with-text p {
+  margin: 0;
+  white-space: nowrap; /* Prevent text from wrapping */
 }
 
 .projects-tabs-container {
   display: grid;
-  gap: 20px;
+  gap: 30px;
   grid-template-rows: auto; /* 3 rows that size to fit content */
-  grid-template-columns: auto auto auto auto; /* 1 column */
+  grid-template-columns: auto auto auto auto; /* 4 columns */
   height: 100vh;
 }
 
@@ -177,13 +207,18 @@ h2 {
   border: 4px solid #05939b;
   background-color: #05939b;
   border-radius: 8px;
-  max-width: 340px;
+  max-width: 300px;
   height: 420px;
+  transition: scale 0.3s;
+}
+
+.projects-tabs:hover {
+  scale: 1.1;
 }
 
 .image-proj {
   border-radius: 8px;
-  max-width: 340px;
+  max-width: 300px;
   height: 300px;
   margin-bottom: 0;
   object-fit: cover;
@@ -201,10 +236,10 @@ h2 {
 }
 
 .description-text {
+  font-size: 16px;
   margin-left: 5px;
   margin-bottom: 10px;
   color: #222831;
-  font-size: 18px;
 }
 
 .view-project {
