--- a/style.css
+++ b/style.css
@@ -58,24 +58,35 @@ a:hover {
 }
 
 #profile-pic {
-  height: 150px;
-  width: 150px;
+  background-color: #222831;
+  /* height: 150px;
+  width: 150px; */
+  height: 270px;
+  width: 270px;
   border-radius: 170px;
 }
 
 #profile-img {
-  height: 150px;
-  width: 150px;
+  /* height: 150px;
+  width: 150px; */
+  height: 250px;
+  width: 250px;
+  margin-left: 10px;
+  margin-top: 10px;
   object-fit: cover;
   border-radius: 170px;
 }
 
 h1 {
-  color: #eeeeee;
+  color: #00adb5;
+  background-color: #222831;
+  border-radius: 8px;
   font-style: italic;
   font-size: 4rem;
-  margin-top: 0;
-  margin-bottom: 5px;
+  margin-top: -15px;
+  margin-bottom: -7px;
+  padding-left: 5px;
+  padding-right: 7px;
 }
 
 h2 {
@@ -83,8 +94,16 @@ h2 {
 }
 
 .designer {
-  color: #222831;
   font-style: italic;
+}
+
+.sub-text {
+  width: 400px;
+  padding-left: 60px;
+  margin-top: 0;
+  border-radius: 8px;
+  background-color: #222831;
+  color: #e57c23;
 }
 
 #about-me {
@@ -183,7 +202,7 @@ h2 {
   text-align: left;
 }
 
-.hr-with-text {
+.seperator {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -193,14 +212,14 @@ h2 {
   margin-bottom: 25px;
 }
 
-.hr-with-text::after {
+.seperator::after {
   content: "";
   flex-grow: 1;
   border-bottom: 1px solid #e57c23;
   margin-left: 10px; /* Spacing between line and text */
 }
 
-.hr-with-text p {
+.seperator-with-text p {
   margin: 0;
   white-space: nowrap; /* Prevent text from wrapping */
 }
