--- a/style.css
+++ b/style.css
@@ -10,11 +10,9 @@ body {
 }
 
 #header {
-  background-image: url(./assets/images/headerBackground.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  height: 950px;
+  background: url("./assets/images/headerBackground.jpg") no-repeat center center/cover;
   margin-bottom: 50px;
+  height: 100vh;
 }
 
 .nav-bar {
