--- a/style.css
+++ b/style.css
@@ -13,12 +13,18 @@ body {
   background: url("./assets/images/headerBackground.jpg") no-repeat center center/cover;
   margin-bottom: 50px;
   height: 100vh;
+  display: flex; /* Enable Flexbox */
+  flex-direction: column; /* Arrange children vertically */
+  align-items: center; /* Center horizontally */
+  justify-content: center; /* Center vertically */
+  position: relative; /* Set relative positioning for child absolute positioning */
 }
 
 .nav-bar {
   z-index: 10000;
   position: fixed;
-  top: 0px;
+  top: 0;
+  right: 0;
   width: 100%;
 }
 
@@ -27,12 +33,13 @@ body {
   flex-direction: row;
   gap: 20px;
   margin: 0;
-  justify-content: flex-start;
+  justify-content: center; /* Center nav items horizontally */
   font-size: 22px;
   background-color: #eeeeee;
-  padding: 10px 10px;
+  padding: 10px;
   height: 30px;
 }
+
 .nav-list {
   list-style: none;
   font-weight: bold;
@@ -52,27 +59,25 @@ a:hover {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 70vh;
+  text-align: center; /* Center text horizontally */
 }
 
 #profile-pic {
   background-color: #222831;
-  /* height: 150px;
-  width: 150px; */
   height: 270px;
   width: 270px;
-  border-radius: 170px;
+  border-radius: 50%; /* Make it a circle */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1;
 }
 
 #profile-img {
-  /* height: 150px;
-  width: 150px; */
   height: 250px;
   width: 250px;
-  margin-left: 10px;
-  margin-top: 10px;
   object-fit: cover;
-  border-radius: 170px;
+  border-radius: 50%; /* Ensure the image fits the circle */
 }
 
 h1 {
@@ -81,10 +86,8 @@ h1 {
   border-radius: 8px;
   font-style: italic;
   font-size: 4rem;
-  margin-top: -15px;
-  margin-bottom: -7px;
-  padding-left: 5px;
-  padding-right: 7px;
+  margin: -20px 0; /* Adjust margins */
+  padding: 0 10px;
 }
 
 h2 {
@@ -97,17 +100,47 @@ h2 {
 
 .sub-text {
   width: 400px;
-  padding-left: 60px;
   margin-top: 0;
   border-radius: 8px;
   background-color: #222831;
   color: #e57c23;
+  padding: 10px;
+}
+
+/* Arrow animation */
+.arrow {
+  cursor: pointer;
+  width: 220px;
+  height: 50px;
+  margin-top: 20px; /* Adjust spacing from the text above */
+  animation: mymove 1.5s infinite;
+  position: absolute; /* Absolute positioning */
+  bottom: 20px; /* Distance from the bottom */
+  left: 45%; /* Center horizontally */
+  transform: translateX(-45%); /* Center horizontally */
+}
+
+@keyframes mymove {
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-10px);
+  }
+  60% {
+    transform: translateY(-5px);
+  }
 }
 
 #my-skillset {
   display: flex;
   flex-direction: column;
 }
+
 .skillset-container {
   margin-left: 50px;
   float: left;
