--- a/My-Projects/PortofolioProjects/TheLibrary/index.css
+++ b/My-Projects/PortofolioProjects/TheLibrary/index.css
@@ -88,7 +88,7 @@ h1 {
 #header {
   width: 100%;
   height: 65vh; /* Full viewport height */
-  background-image: url("/fontBackground.jpg"); /* Path to your image */
+  background-image: url("fontBackground.jpg"); /* Path to your image */
   background-size: cover; /* Ensures the image covers the entire section */
   background-position: center; /* Centers the image */
   background-repeat: no-repeat; /* Ensures the image doesn't repeat */
