--- a/style.css
+++ b/style.css
@@ -9,6 +9,16 @@ body {
   font-family: "Abel", sans-serif;
 }
 
+/* Makes elements untargetable from the user */
+.unselectable {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
 #header {
   background: url("./assets/images/headerBackground.jpg") no-repeat center center/cover;
   margin-bottom: 50px;
@@ -146,6 +156,7 @@ h2 {
 }
 
 .skillset-container {
+  margin-top: 100px;
   margin-left: 50px;
   float: left;
   margin-bottom: 100px;
