--- a/style.css
+++ b/style.css
@@ -158,8 +158,13 @@ h2 {
 .skillset-container {
   margin-top: 100px;
   margin-left: 50px;
+  margin-right: 50px;
   float: left;
   margin-bottom: 100px;
+  background-color: rgba(134, 134, 134, 0.356); /* 50% opacity background */
+  border-radius: 20px;
+  padding: 20px;
+  box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.459);
 }
 
 .skills-title {
