--- a/style.css
+++ b/style.css
@@ -172,6 +172,7 @@ h2 {
   margin-bottom: 5px;
   margin-right: 50px;
   display: flex;
+  text-shadow: 3px 5px 4px rgba(0, 0, 0, 0.5);
 }
 
 .skills-info-title {
@@ -179,6 +180,7 @@ h2 {
   font-size: 2rem;
   display: inline-block;
   margin-bottom: 0;
+  text-shadow: 3px 5px 4px rgba(0, 0, 0, 0.5);
 }
 
 .skills-info {
@@ -196,6 +198,7 @@ h2 {
 .skills-prgph {
   font-size: 20px;
   width: 85%;
+  opacity: 0.7;
 }
 
 .icon-mark {
