--- a/style.css
+++ b/style.css
@@ -180,6 +180,7 @@ h2 {
   margin: 0;
 }
 
+/* animates the h1 el */
 @keyframes introText {
   0%,
   5% {
@@ -384,24 +385,42 @@ h2 {
   display: grid;
   justify-content: space-evenly;
   gap: 30px;
-  grid-template-rows: auto; /* 3 rows that size to fit content */
-  grid-template-columns: auto auto auto auto; /* 4 columns */
-  height: 100vh;
+  grid-template-rows: auto; /* Rows that size to fit content */
+  grid-template-columns: repeat(3, 1fr); /* 4 columns */
 }
 
 .projects-tabs {
   border: 4px solid #05939b;
   background-color: #05939b;
   border-radius: 10px;
-  max-width: 300px;
+  width: 300px;
   height: 420px;
   box-shadow: 0px 1px 20px 2px rgba(0, 0, 0, 0.603);
   transition: scale 0.3s, box-shadow 0.2s;
+  min-width: 250px; /* Minimum width to prevent collapsing */
 }
 
 .projects-tabs:hover {
   scale: 1.1;
   box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.459);
+}
+
+@media (max-width: 1200px) {
+  .projects-tabs-container {
+    grid-template-columns: repeat(2, 1fr); /* 2 columns for medium screens */
+  }
+}
+
+@media (max-width: 700px) {
+  .projects-tabs-container {
+    grid-template-columns: repeat(1, 1fr); /* 2 columns for medium screens */
+  }
+}
+
+@media (max-width: 600px) {
+  .projects-tabs {
+    height: auto; /* Allow height to adjust automatically */
+  }
 }
 
 .image-proj {
