--- a/style.css
+++ b/style.css
@@ -255,7 +255,7 @@ h2 {
 }
 
 .skillset-container {
-  margin-top: 100px;
+  margin-top: 70px;
   margin-left: 50px;
   margin-right: 50px;
   float: left;
@@ -523,9 +523,19 @@ h2 {
 }
 
 .about-me {
+  margin-top: 50px;
+  margin-right: 50px;
   margin-left: 50px;
   float: left;
-  margin-bottom: 100px;
+  background-color: rgba(134, 134, 134, 0.356); /* 50% opacity background */
+  border-radius: 20px;
+  padding: 20px;
+  box-shadow: 0px 1px 20px 2px rgba(0, 0, 0, 0.603);
+  transition: box-shadow 0.3s;
+}
+
+.about-me:hover {
+  box-shadow: 0px 1px 20px 2px rgb(229, 126, 35);
 }
 
 .abt-me-title {
