--- a/style.css
+++ b/style.css
@@ -410,47 +410,53 @@ h2 {
   box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.459);
 }
 
-@media (max-width: 1200px) {
+@media (max-width: 1920px), (max-height: 1080px) {
   .projects-tabs-container {
-    grid-template-columns: repeat(2, 1fr); /* 2 columns for medium screens */
+    grid-template-rows: auto;
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media (max-width: 1280px), (max-height: 720px) {
+  .projects-tabs-container {
+    grid-template-columns: repeat(2, 1fr);
   }
 }
 
 @media (max-width: 700px) {
   .projects-tabs-container {
-    grid-template-columns: repeat(1, 1fr); /* 2 columns for medium screens */
+    grid-template-columns: repeat(1, 1fr);
   }
 }
 
 /* Media query for screens 360px to 414px wide (mobile portrait) */
-@media (min-width: 360px) and (max-width: 414px) {
+@media (min-width: 300px) and (max-width: 414px) {
   /* Repsonsiveness for main page */
+  #header {
+    height: 100dvh;
+  }
   #nav-elements li {
     display: none;
   }
 
   .logo-container {
-    width: 100%; /* Adjust to your needs */
+    /* width: 50%; */
     justify-content: flex-start;
   }
 
   /* new bellow */
 
   .dropdown {
-    margin-left: 30px;
+    margin-left: 20px;
     float: left;
     overflow: hidden;
     opacity: 1;
   }
 
   .dropdown .dropbtn {
-    font-size: 16px;
     border: none;
     outline: none;
-    color: black;
-    padding: 14px 16px;
-    background-color: #05939b;
-    font-family: inherit;
+    padding: 0;
     margin: 0;
   }
 
@@ -474,7 +480,7 @@ h2 {
   }
 
   .dropdown-content a:hover {
-    background-color: #ddd;
+    background-color: #e57c23;
   }
 
   .dropdown:hover .dropdown-content {
@@ -511,12 +517,38 @@ h2 {
   }
 
   .projects-container {
-    margin: 10px 10px 10px 10px;
-    background-color: rgba(134, 134, 134, 0.212); /* 50% opacity background */
-    border-radius: 20px;
-    padding: 20px;
-    box-shadow: 0px 1px 20px 2px rgba(0, 0, 0, 0.603);
-    transition: box-shadow 0.3s;
+    margin: 10px;
+  }
+
+  /* Repsonsivness for contact me */
+
+  .seperator {
+    margin: 0 0 0 15px;
+    width: 80%;
+  }
+  .seperator::after {
+    margin: 0;
+  }
+
+  .contact-me-title {
+    margin: 15px 0 15px 10px !important;
+  }
+
+  .contact-info-title {
+    margin: 0 0 0 10px !important;
+    width: 325px;
+  }
+
+  .contact-info-paragraph {
+    margin: 15px 0 0 10px !important;
+  }
+
+  .contact-info ul {
+    padding: 0 !important;
+  }
+
+  .contact-info ul li {
+    margin: 25px 0 0 10px !important;
   }
 }
 
