changed padding in logo from 40px to 20px

--- a/style.css
+++ b/style.css
@@ -435,6 +435,11 @@ h2 {
   #header {
     height: 100dvh;
   }
+
+  #nav-elements {
+    padding: 20px;
+  }
+
   #nav-elements li {
     display: none;
   }
