--- a/style.css
+++ b/style.css
@@ -446,13 +446,12 @@ h2 {
 
   .logo-container {
     /* width: 50%; */
-    justify-content: flex-start;
+    justify-content: space-between;
   }
 
   /* new bellow */
 
   .dropdown {
-    margin-left: 20px;
     float: left;
     overflow: hidden;
     opacity: 1;
