--- a/style.css
+++ b/style.css
@@ -399,7 +399,7 @@ h2 {
 }
 
 .projects-tabs {
-  border: 4px solid #05939b;
+  border: 4px solid rgb(5, 147, 155);
   background-color: #05939b;
   border-radius: 10px;
   width: 300px;
@@ -456,6 +456,7 @@ h2 {
   /* new bellow */
 
   .dropdown {
+    /* margin-left: 40px; */
     float: left;
     overflow: hidden;
     display: initial;
@@ -488,13 +489,14 @@ h2 {
   }
 
   .dropdown-content a:hover {
-    background-color: #e57c23;
+    background-color: rgb(229, 124, 35);
   }
 
   .dropdown:hover .dropdown-content {
     display: block;
   }
   /* new above */
+
   .name-intro {
     font-size: 2.8rem;
     margin-left: -30px;
@@ -512,19 +514,22 @@ h2 {
     bottom: 0;
     left: 0;
     margin: 20px;
-    background-color: #00adb5;
+    /* background-color: #e04b4b; */
+    background: url("assets/images/comment-solid.svg") no-repeat center/55px 55px;
     width: 75px;
     height: 75px;
     border-radius: 37px;
     opacity: 1;
     transition: width 0.3s ease; /* Added smooth transition */
     overflow: hidden;
+    pointer-events: auto;
   }
 
   .social-media-container:hover,
   .social-media-container:active {
     width: 310px;
-    /* background-color: rgba(0, 0, 0, 0); */
+    pointer-events: auto;
+    background: none;
   }
 
   .social-media-expand-btn {
@@ -543,10 +548,16 @@ h2 {
   }
 
   .social-media-icon {
-    background-color: blue;
     width: 50px;
     height: 50px;
     border-radius: 25px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .info-icon {
+    color: #e57c23 !important;
   }
 
   /* Repsonsiveness for projects page */
